--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@ code {
   box-shadow: inset 400px 0 0 0 rgb(4, 4, 188);
   border: #000081 solid 2px;
 }
+
+.slide-right {
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.6s;
+}
+
+.slide-right:hover {
+  box-shadow: inset 400px 0 0 0 rgb(23, 23, 23);
+}
