--- a/src/index.css
+++ b/src/index.css
@@ -16,18 +16,12 @@ code {
     monospace;
 }
 
-.slide_right {
-  -webkit-transition: ease-out 0.4s;
-  -moz-transition: ease-out 0.4s;
-  transition: ease-out 0.4s;
-}
-
 .slide_right:hover {
   box-shadow: inset 400px 0 0 0 rgb(4, 4, 188);
   border: #000081 solid 2px;
 }
 
-.slide-right {
+.slide-right, .slide-right-navbar, .slide-right {
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.6s;
@@ -35,4 +29,8 @@ code {
 
 .slide-right:hover {
   box-shadow: inset 400px 0 0 0 rgb(23, 23, 23);
+}
+
+.slide-right-navbar:hover {
+  box-shadow: inset 400px 0 0 0 #4E4FEB;
 }
