--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
   border: #000081 solid 2px;
 }
 
-.slide-right, .slide-right-navbar, .slide-right {
+.slide-right, .slide-right-navbar, .slide-right, .slide-right-home-navbar {
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.6s;
@@ -33,4 +33,8 @@ code {
 
 .slide-right-navbar:hover {
   box-shadow: inset 400px 0 0 0 #f0f0f0;
+}
+
+.slide-right-home-navbar:hover {
+  box-shadow: inset 400px 0 0 0 #4E4FEB;
 }
